--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Home page</h1>
 
-<%= link_to "Start game", players_path %>
+<%= link_to "Start game", options_path %>
 
 <h2><a href="#">Statistics</a></h2>
 
