--- a/app/views/games/options.html.erb
+++ b/app/views/games/options.html.erb
@@ -1,6 +1,7 @@
 <%= provide :title, "Game Options" %>
 
 <%= form_tag :controller => "games", :action => "create" do  %>
-	<%= render "players/list_of_players" %>
-	<%= submit_tag("Submit") %>
+  <%= render "players/list_of_players" %>
+  <%= render "games/select_mode"%>
+  <%= submit_tag("Submit") %>
 <% end %>
