--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,6 +2,5 @@
 <h1>Home page</h1>
 
 <%= link_to "Start game", options_path %>
-
-<h2><a href="#">Statistics</a></h2>
+<%= link_to "Statistics", results_path %>
 
